-XX:CompressedClassSpaceSize analysis.